--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     
     steps:
       - uses: actions/checkout@v2
@@ -34,21 +34,12 @@ jobs:
           cmake --build . --config Release
           cd ..
 
-      - name: Compile wrapper on Linux
-        if: startsWith(runner.os, 'Linux')
+      - name: Compile wrapper on Linux / macOS
+        if: startsWith(runner.os, 'Linux') || startsWith(runner.os, 'macOS')
         run: |
           mkdir tmp-build
           cd tmp-build
           cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release
-          cmake --build . --config Release
-          cd ..
-
-      - name: Compile wrapper on macOS
-        if: startsWith(runner.os, 'macOS')
-        run: |
-          mkdir tmp-build
-          cd tmp-build
-          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$GITHUB_WORKSPACE/pythonfmu/resources/binaries/darwin64 -DCMAKE_BUILD_TYPE=Release
           cmake --build . --config Release
           cd ..
 
@@ -79,7 +70,7 @@ jobs:
       - name: Build distribution artifacts
         run: |
           python -m pip install setuptools wheel
-          python setup.py bdist_wheel
+          python setup.py sdist bdist_wheel
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v1
