--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
           path: pythonfmu/resources
 
   build-python:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     needs: build-wrapper
     runs-on: ubuntu-latest
     steps:
@@ -79,6 +80,7 @@ jobs:
           path: dist
 
   test:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     needs: build-python
     runs-on: ${{ matrix.os }}
     strategy:
