Install fmpy for integration test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Run the Tests
         run: |
           conda activate test
-          conda install -n test -c conda-forge pytest pyfmi
+          conda install -n test -c conda-forge pytest pyfmi fmpy
           cd python-wheel
           python -m pip install pythonfmu*.whl
           python -m pytest --pyargs pythonfmu
