--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ license = MIT
 license-file = LICENSE
 keywords = FMI
 classifiers = 
-	Development Status :: 2 - Pre-Alpha
+	Development Status :: 3 - Alpha
 	Intended Audience :: End Users/Desktop
 	Intended Audience :: Developers
 	Intended Audience :: Science/Research
@@ -25,6 +25,7 @@ classifiers =
 tests_require = 
 	pytest
 	pyfmi
+	fmpy
 
 [options]
 include_package_data = True
@@ -45,6 +46,7 @@ console_scripts =
 tests = 
 	pytest
 	pyfmi
+	fmpy
 
 [tool:pytest]
 markers =
