--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,8 @@ jobs:
         python-version: [3.6, 3.7, 3.8]
     
     steps:
+      - uses: actions/checkout@v2
+
       - name: Download python package
         uses: actions/download-artifact@v1
         with:
@@ -97,7 +99,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: /usr/share/miniconda/pkgs
-          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
           restore-keys: |
             ${{ runner.os }}-test-cache-conda-pkgs-
             ${{ runner.os }}-test-
@@ -107,7 +109,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: /usr/share/miniconda/pkgs
-          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
           restore-keys: |
             ${{ runner.os }}-test-cache-conda-pkgs-
             ${{ runner.os }}-test-
@@ -117,7 +119,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: C:\Miniconda\pkgs
-          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
+          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
           restore-keys: |
             ${{ runner.os }}-test-cache-conda-pkgs-
             ${{ runner.os }}-test-
@@ -131,7 +133,8 @@ jobs:
       - name: Run the Tests
         run: |
           conda activate test
-          conda install -n test -c conda-forge pytest pyfmi
+          # Install test dependencies - update environment.yml if they changed
+          conda env update --name=test --file=environment.yml
           cd python-wheel
           python -m pip install pythonfmu*.whl
           python -m pytest --pyargs pythonfmu
