Try adding callbacks to transfer log message

--- a/pythonfmu/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/CMakeLists.txt
@@ -47,6 +47,7 @@ endif ()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/headers)
 
 set(sources
+        headers/pythonfmu/callbacks.cpp
         cpp/cppfmu_cs.cpp
         cpp/fmi_functions.cpp
         cpp/PySlaveInstance.cpp
