--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include LICENSE
 include README.md
 
+include pythonfmu/tests/csvdemo.csv
+
 recursive-include pythonfmu/pythonfmu-export *
 recursive-include pythonfmu/resources *
