--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ pythonfmu =
 [options.entry_points]
 console_scripts = 
 	pythonfmu-builder = pythonfmu.builder:main
+	pythonfmu-csvbuilder = pythonfmu.csvbuilder:main
 
 [options.extras_require]
 tests = 
