--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ pythonfmu =
 console_scripts = 
 	pythonfmu-builder = pythonfmu.builder:main
 	pythonfmu-deploy = pythonfmu.deploy:main
+	pythonfmu-csvbuilder = pythonfmu.csvbuilder:main
 
 [options.extras_require]
 tests = 
