Switch to subcommands cli API

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,9 +40,7 @@ pythonfmu =
 
 [options.entry_points]
 console_scripts = 
-	pythonfmu-builder = pythonfmu.builder:main
-	pythonfmu-deploy = pythonfmu.deploy:main
-	pythonfmu-csvbuilder = pythonfmu.csvbuilder:main
+	pythonfmu = pythonfmu.__main__:cli_main
 
 [options.extras_require]
 tests = 
