--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,8 +61,8 @@ jobs:
         pip install setuptools wheel twine
     - name: Build and publish
       env:
-        TWINE_USERNAME: "__token__"
-        TWINE_PASSWORD: "pypi-${{ secrets.PYPI_PYTHONFMU_API_TOKEN }}"
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_PYTHONFMU_API_TOKEN }}
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
