--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,55 +94,16 @@ jobs:
         with:
           name: python-wheel
 
-#      - name: Cache conda packages for Linux
-#        if: startsWith(runner.os, 'Linux')
-#        uses: actions/cache@v1
-#        with:
-#          path: /usr/share/miniconda/pkgs
-#          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
-#          restore-keys: |
-#            ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
-#            ${{ runner.os }}-test-cache-conda-pkgs-
-#            ${{ runner.os }}-test-
-
-#      - name: Cache conda packages for Mac OS
-#        if: startsWith(runner.os, 'macOS')
-#        uses: actions/cache@v1
-#        with:
-#          path: /usr/share/miniconda/pkgs
-#          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
-#          restore-keys: |
-#            ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
-#            ${{ runner.os }}-test-cache-conda-pkgs-
-#            ${{ runner.os }}-test-
-
-#      - name: Cache conda packages for Windows
-#        if: startsWith(runner.os, 'Windows')
-#        uses: actions/cache@v1
-#        with:
-#          path: C:\Miniconda\pkgs
-#          key: ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}
-#          restore-keys: |
-#            ${{ runner.os }}-test-cache-conda-pkgs-${{ matrix.python-version }}
-#            ${{ runner.os }}-test-cache-conda-pkgs-
-#            ${{ runner.os }}-test-
-
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v2
         with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-        
+          python-version: 3.6 #${{ matrix.python-version }}
+          architecture: 'x64'
+
       - name: Run the Tests
         run: |
-          conda activate test
-          # Install test dependencies - update environment.yml if they changed
-          conda env update --name=test --file=environment.yml
-          cd python-wheel
-          python -m pip install pythonfmu*.whl
-          python -m pytest --pyargs pythonfmu
-          cd ..
-        shell: bash -l {0}
+          pip install -r requirements.txt
+          pytest
 
   test-notebook:
     runs-on: ubuntu-latest
