--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,8 @@ jobs:
       matrix:
         os: [ubuntu-18.04, windows-2019]
         python-version: [3.7, 3.8, 3.9]
-    
+    timeout-minutes: 20
+
     steps:
       - uses: actions/checkout@v2
 
