--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include LICENSE
 include README.md
 
-include pythonfmu/tests/csvdemo.csv
+include pythonfmu/tests/data *
+include pythonfmu/tests/slaves *
 
 recursive-include pythonfmu/pythonfmu-export *
 recursive-include pythonfmu/resources *
