--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
 include LICENSE
 include README.md
 
-include pythonfmu/tests/data *
-include pythonfmu/tests/slaves *
+recursive-include pythonfmu/tests/data *
+recursive-include pythonfmu/tests/slaves *
 
-recursive-include pythonfmu/pythonfmu-export *
 recursive-include pythonfmu/resources *
+recursive-include pythonfmu/pythonfmu-export *
