--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,9 @@ jobs:
       matrix:
         os: [ubuntu-18.04, windows-2019]
         python-version: [3.7, 3.8, 3.9]
+        exclude:
+          - os: ubuntu-18.04
+            python-version: 3.7
     timeout-minutes: 20
 
     steps:
