--- a/pythonfmu/pythonfmu-export/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 project(pythonfmu-export VERSION 0.2.0)
 
 # ==============================================================================
@@ -36,6 +36,7 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 # Force to use stable Python ABI https://docs.python.org/3/c-api/stable.html
 add_compile_definitions(Py_LIMITED_API)
 find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+set(Python3_FIND_STRATEGY LOCATION)
 if (WIN32)
   set(Python3_LIBRARIES ${Python3_LIBRARY_DIRS}/python3.lib)
 endif ()
