--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - '*'
+on: [push, workflow_dispatch]
 
 jobs:
 
@@ -47,7 +41,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04, windows-2019]
         python-version: [3.7, 3.8, 3.9]
-    timeout-minutes: 20
+    timeout-minutes: 25
 
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +52,7 @@ jobs:
           name: python-wheel
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v2.1.1
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
