--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
         exclude:
           - os: ubuntu-18.04
             python-version: 3.7
-    timeout-minutes: 20
+    timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v2
@@ -99,58 +99,10 @@ jobs:
         with:
           name: python-wheel
 
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-        
       - name: Run the Tests
         run: |
-          conda activate test
-          # Install test dependencies - update environment.yml if they changed
-          conda env update --name=test --file=environment.yml
-          cd python-wheel
+          python -m pip install -r requirements.txt
           python -m pip install pythonfmu*.whl
           python -m pytest --pyargs pythonfmu
           cd ..
         shell: bash -l {0}
-
-  test-notebook:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cache conda packages for Linux
-        if: startsWith(runner.os, 'Linux')
-        uses: actions/cache@v2
-        with:
-          path: /usr/share/miniconda/pkgs
-          key: ${{ runner.os }}-test-nb-cache-conda-pkgs-${{ hashFiles('binder/environment.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-nb-cache-conda-pkgs-
-            ${{ runner.os }}-test-nb-
-
-      - name: Setup Python
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-        
-      - name: Run the Tests
-        run: |
-          conda activate test
-          # Install binder dependencies - update binder/environment.yml if they changed
-          cp binder/* .
-          conda env update --name=test --file=environment.yml
-          bash ./postBuild
-          cd ./examples
-          jupyter nbconvert --to notebook --execute demo.ipynb
-          cd ..
-        shell: bash -l {0}
-
-      - name: Archive executed notbook
-        uses: actions/upload-artifact@v2
-        with:
-          name: nb-examples
-          path: examples
