--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,13 +86,16 @@ jobs:
       matrix:
         os: [ubuntu-18.04, windows-2019]
         python-version: [3.7, 3.8, 3.9]
-        exclude:
-          - os: ubuntu-18.04
-            python-version: 3.7
     timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: 'x64'
 
       - name: Download python package
         uses: actions/download-artifact@v1
@@ -101,8 +104,8 @@ jobs:
 
       - name: Run the Tests
         run: |
-          python -m pip install -r requirements.txt
-          python -m pip install pythonfmu*.whl
-          python -m pytest --pyargs pythonfmu
+          pip install -r requirements.txt
+          cd python-wheel
+          pip install pythonfmu*.whl
+          pytest --pyargs pythonfmu
           cd ..
-        shell: bash -l {0}
