--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,69 +9,28 @@ on:
       - '*'
 
 jobs:
-  build-wrapper:
 
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-2019]
+        python-version: [3.7, 3.8, 3.9]
+    timeout-minutes: 15
     
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Python 3.x
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
           architecture: 'x64'
 
-      - name: Compile wrapper on Windows
-        if: startsWith(runner.os, 'Windows')
-        run: |
-          mkdir tmp-build
-          cd tmp-build
-          cmake $Env:github_workspace/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release -A x64
-          cmake --build . --config Release
-          cd ..
-
-      - name: Compile wrapper on Linux / macOS
-        if: startsWith(runner.os, 'Linux') || startsWith(runner.os, 'macOS')
-        run: |
-          mkdir tmp-build
-          cd tmp-build
-          cmake $GITHUB_WORKSPACE/pythonfmu/pythonfmu-export -DCMAKE_BUILD_TYPE=Release
-          cmake --build . --config Release
-          cd ..
-
-      - name: Archive wrapper library
-        uses: actions/upload-artifact@v2
-        with:
-          name: lib-wrapper
-          path: pythonfmu/resources
-
-  build-python:
-    needs: build-wrapper
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-          architecture: 'x64'
-
-      - name: Download wrappers
-        uses: actions/download-artifact@v1
-        with:
-          name: lib-wrapper
-          path: pythonfmu/resources
-    
       - name: Build distribution artifacts
         run: |
           python -m pip install setuptools wheel
           python setup.py sdist bdist_wheel
-
       - name: Archive production artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -79,7 +38,7 @@ jobs:
           path: dist
 
   test:
-    needs: build-python
+    needs: build
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
