--- a/pythonfmu/pythonfmu-export/src/CMakeLists.txt
+++ b/pythonfmu/pythonfmu-export/src/CMakeLists.txt
@@ -26,10 +26,12 @@ target_include_directories(pythonfmu-export
         "${CMAKE_CURRENT_SOURCE_DIR}"
         )
 
-target_link_libraries(pythonfmu-export
-        PRIVATE
-        ${Python3_LIBRARIES}
-        )
+if (WIN32)
+  target_link_libraries(pythonfmu-export PRIVATE ${Python3_LIBRARIES})
+elseif (APPLE)
+  set_target_properties(pythonfmu-export PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
+endif ()
+# and on linux, dont link!
 
 if (WIN32)
   set_target_properties(pythonfmu-export
