Update main.yml [skip ci]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Archive wrapper library
         uses: actions/upload-artifact@v4
         with:
-          name: lib-wrapper
+          name: lib-wrapper-${{ matrix.os }}
           path: pythonfmu/resources
 
   build-python:
@@ -64,7 +64,7 @@ jobs:
       - name: Download wrappers
         uses: actions/download-artifact@v4
         with:
-          name: lib-wrapper
+          pattern: lib-wrapper-*
           path: pythonfmu/resources
     
       - name: Build distribution artifacts
