--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
         with:
           pattern: lib-wrapper-*
           path: pythonfmu/resources
+          merge-multiple: true
     
       - name: Build distribution artifacts
         run: |
