--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,8 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         pattern: lib-wrapper-*
-        path: pythonfmu/resources        
+        path: pythonfmu/resources
+        merge-multiple: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
